# pvr.iptvsimple

./: CMakeLists.txt  Makefile  README.md
pvr.iptvsimple/: addon.xml.in  changelog.txt
pvr.iptvsimple/resources/language/resource.language.en_gb/: strings.po
pvr.iptvsimple/resources/language/resource.language.pl_pl/: strings.po
src/: PVRDvrData.cpp  PVRDvrData.h  PVRIptvData.cpp  PVRIptvData.h  PVRNamespace.h  PVRPlayList.cpp  PVRPlayList.h  PVRReaderThread.cpp  PVRReaderThread.h  PVRRecorderThread.cpp  PVRRecorderThread.h  PVRSchedulerThread.cpp  PVRSchedulerThread.h  PVRUtils.cpp  PVRUtils.h  client.cpp  client.h
src/libexecstream/: exec-stream.cpp  exec-stream.h
src/libexecstream/posix/: exec-stream-helpers.cpp  exec-stream-helpers.h  exec-stream-impl.cpp
src/libexecstream/test/: exec-stream-test.cpp
src/libexecstream/win/: exec-stream-helpers.cpp  exec-stream-helpers.h  exec-stream-impl.cpp
